[gd_scene load_steps=12 format=3 uid="uid://wugdxaccemxi"]

[ext_resource type="Script" uid="uid://dsn3qfx5wi8gf" path="res://features/factory/factory.gd" id="1_4ugtf"]
[ext_resource type="Texture2D" uid="uid://bb78m65bmwsqy" path="res://features/factory/sprites/BaseStation6x6.png" id="2_berpe"]
[ext_resource type="Texture2D" uid="uid://g4q87ae1mjal" path="res://features/factory/sprites/1Workshop8x4.png" id="3_8h2px"]
[ext_resource type="Texture2D" uid="uid://barjhjwkm2hdj" path="res://features/factory/sprites/Administration4x6.png" id="3_katje"]
[ext_resource type="Texture2D" uid="uid://dw568tipc2fux" path="res://features/factory/sprites/Pipe4x3.png" id="5_yb8go"]
[ext_resource type="Texture2D" uid="uid://bpsydxm2g8b6k" path="res://features/factory/sprites/Storage10x6.png" id="6_xkw0e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_berpe"]
radius = 120.067

[sub_resource type="CircleShape2D" id="CircleShape2D_katje"]
radius = 121.334

[sub_resource type="CircleShape2D" id="CircleShape2D_yb8go"]
radius = 119.105

[sub_resource type="CircleShape2D" id="CircleShape2D_xkw0e"]
radius = 118.152

[sub_resource type="CircleShape2D" id="CircleShape2D_m38e2"]
radius = 139.291

[node name="Factory" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_4ugtf")

[node name="Level Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 40.0
autostart = true

[node name="Corruption Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 15.0
autostart = true

[node name="BaseStation" type="Sprite2D" parent="."]
texture = ExtResource("2_berpe")
offset = Vector2(0, -64)

[node name="Administration" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(80, 0)
texture = ExtResource("3_katje")
offset = Vector2(0, -64)

[node name="Workshop" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-112, 0)
texture = ExtResource("3_8h2px")
offset = Vector2(0, -64)

[node name="Pipe" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-208, 8)
texture = ExtResource("5_yb8go")
offset = Vector2(0, -64)

[node name="Storage" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(192, 0)
texture = ExtResource("6_xkw0e")
offset = Vector2(0, -64)

[node name="SlowArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -64)
monitorable = false

[node name="BaseStationSlow" type="CollisionShape2D" parent="SlowArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_berpe")

[node name="AdministrationSlow" type="CollisionShape2D" parent="SlowArea"]
unique_name_in_owner = true
position = Vector2(80, 0)
shape = SubResource("CircleShape2D_katje")
disabled = true

[node name="WorkshopSlow" type="CollisionShape2D" parent="SlowArea"]
unique_name_in_owner = true
position = Vector2(-113, 0)
shape = SubResource("CircleShape2D_yb8go")
disabled = true

[node name="PipeSlow" type="CollisionShape2D" parent="SlowArea"]
unique_name_in_owner = true
position = Vector2(-207, 0)
shape = SubResource("CircleShape2D_xkw0e")
disabled = true

[node name="StorageSlow" type="CollisionShape2D" parent="SlowArea"]
unique_name_in_owner = true
position = Vector2(192, 0)
shape = SubResource("CircleShape2D_m38e2")
disabled = true
